Add the other order fields
